--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@fluentui/react": "^8.18.0",
+    "@formily/antd": "^2.0.0-beta.66",
+    "@formily/core": "^2.0.0-beta.66",
+    "@formily/react": "^2.0.0-beta.66",
     "@ginkgo-bioworks/react-json-schema-form-builder": "^2.4.2",
+    "@monaco-editor/react": "^4.2.0",
     "@rjsf/core": "^2.5.1",
     "@rjsf/fluent-ui": "^2.5.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "ace-builds": "^1.4.12",
+    "antd": "^4.16.3",
     "jss": "^10.6.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
