--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,47 +1,26 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "create-react-app",
+  "version": "4.0.0",
   "private": true,
-  "dependencies": {
-    "@ant-design/icons": "^4.6.2",
-    "@fluentui/react": "^8.18.0",
-    "@formily/antd": "^2.0.0-beta.66",
-    "@formily/core": "^2.0.0-beta.66",
-    "@formily/react": "^2.0.0-beta.66",
-    "@ginkgo-bioworks/react-json-schema-form-builder": "^2.4.2",
-    "@monaco-editor/react": "^4.2.0",
-    "@rjsf/core": "^2.5.1",
-    "@rjsf/fluent-ui": "^2.5.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "ace-builds": "^1.4.12",
-    "antd": "^4.16.3",
-    "jss": "^10.6.0",
-    "lodash": "^4.17.21",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^5.2.0",
-    "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "uuid": "^8.3.2",
-    "vis-data": "^7.1.2",
-    "vis-network": "^9.0.4",
-    "web-vitals": "^1.0.1"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@material-ui/core": "latest",
+    "@material-ui/icons": "^4.11.2",
+    "@monaco-editor/react": "^4.2.0",
+    "@rjsf/core": "^2.5.1",
+    "@rjsf/material-ui": "^2.5.1",
+    "clsx": "latest",
+    "hookrouter": "^1.2.5",
+    "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
+    "react": "latest",
+    "react-dom": "latest",
+    "recharts": "^2.0.9"
   },
   "browserslist": {
     "production": [
