--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,16 @@
     "@rjsf/material-ui": "^2.5.1",
     "clsx": "latest",
     "hookrouter": "^1.2.5",
+    "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
+    "prop-types": "^15.7.2",
     "react": "latest",
     "react-dom": "latest",
-    "recharts": "^2.0.9"
+    "recharts": "^2.0.9",
+    "uuid": "^8.3.2",
+    "vis-data": "^7.1.2",
+    "vis-network": "^9.0.4"
   },
   "browserslist": {
     "production": [
