--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "node-dev ./bin/www"
+    "start": "PORT=8080 node ./bin/www",
+    "dev": "PORT=8080 node-dev ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
