--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@monaco-editor/react": "^4.2.0",
     "@rjsf/core": "^2.5.1",
     "@rjsf/material-ui": "^2.5.1",
+    "axios": "^0.21.1",
     "clsx": "latest",
     "hookrouter": "^1.2.5",
     "json-schema-faker": "^0.5.0-rcv.38",
