--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "@rjsf/material-ui": "^2.5.1",
     "axios": "^0.21.1",
     "clsx": "latest",
+    "cross-fetch": "^3.1.4",
     "hookrouter": "^1.2.5",
     "json-schema-faker": "^0.5.0-rcv.38",
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
+    "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
     "react": "latest",
     "react-dom": "latest",
