--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "enkrino": "0.0.1",
+    "enkrino": "^1.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
