--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,6 @@
     "morgan": "~1.9.1",
     "path": "^0.12.7",
     "pg-promise": "^10.11.0",
-    "pug": "2.0.0-beta11"
+    "serve-static": "^1.14.1"
   }
 }
