--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "eject": "DISABLE_ESLINT_PLUGIN=true react-scripts eject"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
@@ -21,6 +22,7 @@
     "axios": "^0.21.1",
     "clsx": "latest",
     "cross-fetch": "^3.1.4",
+    "date-fns": "^2.23.0",
     "hookrouter": "^1.2.5",
     "json-schema-faker": "^0.5.0-rcv.38",
     "lodash": "^4.17.21",
