--- a/backend/package.json
+++ b/backend/package.json
@@ -9,14 +9,17 @@
     "dev": "PORT=8080 node-dev ./bin/www"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "enkrino": "^1.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "minio": "^7.0.19",
     "morgan": "~1.9.1",
     "path": "^0.12.7",
     "pg-promise": "^10.11.0",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "unique-filename": "^1.1.1"
   }
 }
