--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - 21080:80
 
   minio:
-    image: minio/minio
+    image: minio/minio:latest
     hostname: "minio"
     ports:
       - 9000:9000 # api 端口
