--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "mobx-react": "^7.2.0",
     "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
+    "querystring": "^0.2.1",
     "react": "latest",
     "react-dom": "latest",
     "recharts": "^2.0.9",
