--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -2,4 +2,4 @@ FROM postgres:12-alpine3.14
 
 COPY ./bkdata /bkdata
 
-# CMD ["psql --dbname=postgresql://jieshixin:jieshixin,.#@localhost:5432/ticflow < /bkdata"]
+# CMD ["psql --dbname=postgresql://engrafo:engrafo,.#@localhost:5432/ticflow < /bkdata"]
