--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "cross-fetch": "^3.1.4",
     "date-fns": "^2.23.0",
     "hookrouter": "^1.2.5",
+    "js-base64": "^3.7.1",
     "json-schema-faker": "^0.5.0-rcv.38",
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
