--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "buffer": "^6.0.3",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "enkrino": "^1.0.0",
     "express": "~4.16.1",
