--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
     "enkrino": "^1.0.0",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
+    "js-base64": "^3.7.2",
     "minio": "^7.0.19",
     "morgan": "~1.9.1",
     "path": "^0.12.7",
