--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.21.1",
     "clsx": "latest",
     "cross-fetch": "^3.1.4",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.23.0",
     "hookrouter": "^1.2.5",
     "js-base64": "^3.7.1",
@@ -33,6 +34,7 @@
     "prop-types": "^15.7.2",
     "querystring": "^0.2.1",
     "react": "latest",
+    "react-datasheet": "^1.4.9",
     "react-dom": "latest",
     "recharts": "^2.0.9",
     "uuid": "^8.3.2",
